--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <section class="bg-gray">
+      <div class="conteinar">
+        <div="row">
+          asdfasfdasdfasdf
+        </div>
+      </div>
+    </section>
     <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
