--- a/index.html
+++ b/index.html
@@ -8,19 +8,115 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <style>
+      h1, h2, h3, h4, h5, h6, p{
+        color:rgba(255, 255, 255, 1);
+      }
+      p{
+        font-size: 1.5em;
+      }
+      section{
+        padding:40px 0;
+      }
       .bg-gray{background:#ccc;}
+      .bg-orange-800{background: #B71C1C;}
+      .bg-blue{background: #3949AB;}
+      .bg-yellow{background: #FF9800;}
+      .bg-purple{background: #673AB7;}
+      .bg-orange-50{background: #E65100;}
+
+      .copyright{
+        background: #263238; /*blue gray 50*/
+      }
     </style>
     <title>Hello, world!</title>
   </head>
   <body>
-    <section class="bg-gray">
-      <div class="conteinar">
-        <div="row">
-          <h1>Hello, world!</h1>
+    <section class="bg-orange-800"> 
+    
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>Perigos das Tecnologias de Informação e Comunicação</h1>
+            <p>
+              <!-- start slipsum code -->
+
+              Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.
+
+              <!-- end slipsum code -->
+            </p> 
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <!-- end .bg-gray -->
+
+    <section class="bg-blue">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2>Efeitos Psicológicos</h2>
+            <p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+          </div>
+          <div class="col">
+            <!-- imagem -->
+          </div>
         </div>
       </div>
     </section>
 
+    <section class="bg-yellow">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <!-- imagem -->
+          </div>
+          <div class="col">
+            <h2>Saúde Física</h2>
+            <p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-purple">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2>Fake News</h2>
+            <p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+          </div>
+          <div class="col">
+            <!-- imagem -->
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-orange-50">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <!-- imagem -->
+          </div>
+
+          <div class="col">
+            <h2>Roubo de Dados</h2>
+            <p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <section class="copyright">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p>Desenvolvido por <em>Fco. Freitas</em> como produto final da disciplina <strong>Projeto Integrador III</strong>.</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
