--- a/index.html
+++ b/index.html
@@ -7,10 +7,38 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Holtwood+One+SC" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+
     <style>
       h1, h2, h3, h4, h5, h6, p{
         color:rgba(255, 255, 255, 1);
       }
+
+      h1{
+        /*font-family: 'Abril Fatface', cursive;*/
+        /*font-family: 'Passion One', cursive;*/
+        /*font-family: 'Alfa Slab One', cursive;*/
+        /*font-family: 'Bevan', cursive;*/
+        /*font-family: 'Holtwood One SC', serif;*/
+        /*font-family: 'Coda Caption', sans-serif;*/
+        font-family: 'Anton', sans-serif;
+        font-size: 4em;
+        line-height: 1.5em;
+      }
+
       p{
         font-size: 1.5em;
       }
@@ -28,7 +56,7 @@
         background: #263238; /*blue gray 50*/
       }
     </style>
-    <title>Hello, world!</title>
+    <title>Os Perigos das Tecnologias de Informação e Comunicação</title>
   </head>
   <body>
     <section class="bg-orange-800"> 
@@ -36,7 +64,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1>Perigos das Tecnologias de Informação e Comunicação</h1>
+            <h1>Os Perigos das Tecnologias de Informação e Comunicação</h1>
             <p>
               <!-- start slipsum code -->
 
