--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
         font-size: 4em;
         line-height: 1.5em;
       }
+      h2{
+        font-family: 'Anton', sans-serif;
+        font-size: 3em;
+        line-height: 1.5em;
+      }
 
       p{
-        font-size: 1.5em;
+        font-size: 1.3em;
       }
       section{
         padding:80px 0;
