--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
         <div class="row">
           <div class="col">
             <h2>Efeitos Psicológicos</h2>
-            <p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+            <p>
+              Com o desenvolvimeto da tecnologia um novo tipo de transtorno surge devido ao seu uso exagerado - <strong>a dependência 
+              tecnológica</strong>. Os sintomas da dependência de tecnologia já são comparados por especialistas aos traços que uma 
+              dependência química gera na vida de alguém segundo Areias(2017) e pode causar transtornos como: depressão, ansiedade,
+             défcit de atenção, dentre outros. </p>
           </div>
           <div class="col">
             <!-- imagem -->
