--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
               tecnológica</strong>. Os sintomas da dependência de tecnologia já são comparados por especialistas aos traços que uma 
               dependência química gera na vida de alguém segundo Areias(2017) e pode causar transtornos como: depressão, ansiedade,
              défcit de atenção, dentre outros. </p>
+            <p>
+              O desenvolvimento infantil também pode ser afetado pelas tecnologias. As formas como as crianças se relacionam 
+              com <em>dispositivos eletrônicos</em>, <em>jogos</em> e a <em>interet</em> pode definir a forma como elas se relacionam com a sociedade
+            </p>
           </div>
           <div class="col">
             <!-- imagem -->
