--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </p>
           </div>
           <div class="col">
-            <!-- imagem -->
+            <img src="..." class="img-fluid" alt="Responsive image">
           </div>
         </div>
       </div>
