--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="..." class="img-fluid rounded" alt="Responsive image">
+            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded" alt="Responsive image">
           </div>
         </div>
       </div>
