--- a/index.html
+++ b/index.html
@@ -90,14 +90,32 @@
           <div class="col">
             <h2>Efeitos Psicológicos</h2>
             <p>
-              Com o desenvolvimeto da tecnologia um novo tipo de transtorno surge devido ao seu uso exagerado - <strong>a dependência 
-              tecnológica</strong>. Os sintomas da dependência de tecnologia já são comparados por especialistas aos traços que uma 
-              dependência química gera na vida de alguém segundo Areias(2017) e pode causar transtornos como: depressão, ansiedade,
-             défcit de atenção, dentre outros. </p>
+              Apenas dos benefícios que a tecnologia proporciona para toda a 
+              humanidade, o seu  desenvolvimento veio acompanhado por um novo 
+              tipo de transtorno surgiu devido ao seu uso exagerado - a 
+              dependência tecnológica. Ela acontece quando não é possível 
+              controlar a necessidade de utilizar smartphones, Internet ou 
+              jogos - o mundo digital se sobrepõe ao real. </p>
             <p>
-              O desenvolvimento infantil também pode ser afetado pelas tecnologias. As formas como as crianças se relacionam 
-              com <em>dispositivos eletrônicos</em>, <em>jogos</em> e a <em>interet</em> pode definir a forma como elas se relacionam com a sociedade
+              Os sintomas da dependência de tecnologia já são comparados por 
+              especialistas aos traços que uma dependência química gera na vida 
+              de alguém segundo Areias(2017) e pode causar transtornos como: 
+              depressão, ansiedade, déficit de atenção, dentre outros.
             </p>
+            <p>
+            	Os sintomas da dependência de tecnologia já são comparados por 
+            	especialistas aos traços que uma dependência química gera na 
+            	vida de alguém segundo Areias(2017) e pode causar transtornos 
+            	como: depressão, ansiedade, déficit de atenção, dentre outros.
+            </p>
+            
+            <p>
+            	Os sintomas da dependência de tecnologia já são comparados por 
+            	especialistas aos traços que uma dependência química gera na 
+            	vida de alguém segundo Areias(2017) e pode causar transtornos 
+            	como: depressão, ansiedade, déficit de atenção, dentre outros.
+            </p>
+
           </div>
           <div class="col">
             <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded" alt="Responsive image">
