--- a/index.html
+++ b/index.html
@@ -143,7 +143,29 @@
         <div class="row">
           <div class="col">
             <h2>Fake News</h2>
-            <p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+            <p>Fake news são pedaços de histórias publicados por agências de 
+            notícias que contêm alguma forma de desonestidade para, geralmente,  
+            a promoção política. O termo já foi considerado ‘a palavra do ano’ 
+            em 2017, sendo motivo de intrigas entre nações e vem sendo o 
+            preferido pelo presidente dos EUA Donald Thrump.</p>
+            <p>
+            	Por milênios as pessoas que exercem grande poder na sociedade 
+            	utilizam os meios de comunicação para manter seu status. O 
+            	crescimento da Internet nas últimas décadas intensificou a 
+            	possibilidade de alcançar as grandes massas através de diversas 
+            	mídias como: redes sociais, portais de notícia, grupos em 
+            	aplicativos, etc.
+            </p>
+            <p>
+            	De acordo com o Dicionário Urbano as Fake news podem ser 
+            	categorizadas em: ‘mentira direta’ - sendo um pedaço de notícia 
+            	que é objetivamente falsa; ‘mentira por omissão’ - a exclusão 
+            	deliberada de informação de partes de notícias que são críticas 
+            	para o entendimento apropriado da situação; ‘mentindo por 
+            	estrutura - o posicionamento deliberado de informações críticas 
+            	para o final da notícia, resultando que muitas pessoas não leiam 
+            	toda a história; “” - .
+            </p>
           </div>
           <div class="col">
             <!-- imagem -->
