--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
           </div>
           <div class="col">
-            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded" alt="Responsive image">
+            <img src="https://github.com/integranucleos/sobretics/blob/master/src/depositphotos_39366985-stock-illustration-technological-swamp.jpg?raw=true" class="img-fluid rounded" alt="Responsive image">
           </div>
         </div>
       </div>
