--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
           </div>
           <div class="col">
-            <img src="https://github.com/integranucleos/sobretics/blob/master/src/depositphotos_39366985-stock-illustration-technological-swamp.jpg?raw=true" class="img-fluid rounded" alt="Responsive image">
+            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded-circle" alt="">
           </div>
         </div>
       </div>
@@ -128,6 +128,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
+          	<img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded-circle" alt="">
             <!-- imagem -->
           </div>
           <div class="col">
@@ -168,7 +169,7 @@
             </p>
           </div>
           <div class="col">
-            <!-- imagem -->
+            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded-circle" alt="">
           </div>
         </div>
       </div>
@@ -178,7 +179,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <!-- imagem -->
+            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded-circle" alt="">
           </div>
 
           <div class="col">
