--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
           </div>
           <div class="col">
-            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded-circle" alt="">
+            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="rounded-circle" alt="">
           </div>
         </div>
       </div>
