--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
           </div>
           <div class="col">
-            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="rounded-circle" alt="Sobre TICS">
+            <img src="https://github.com/integranucleos/sobretics/blob/master/src/depositphotos_39366985-stock-illustration-technological-swamp.jpg?raw=true" class="img-fluid rounded-circle" alt="Sobre TICS">
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-          	<img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded-circle" alt="">
+          	<img src="https://github.com/integranucleos/sobretics/blob/master/src/depositphotos_39366985-stock-illustration-technological-swamp.jpg?raw=true" class="img-fluid rounded-circle" alt="Sobre TICS">
             <!-- imagem -->
           </div>
           <div class="col">
@@ -169,7 +169,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded-circle" alt="">
+            <img src="https://github.com/integranucleos/sobretics/blob/master/src/stock-vector-fake-news-flat-icon-vector-741588856.jpg?raw=true" class="img-fluid rounded-circle" alt="Sobre TICS">
           </div>
         </div>
       </div>
@@ -179,7 +179,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <img src="https://github.com/integranucleos/sobretics/blob/master/src/81b0d31c6d9dc72997573bc9871964c2.jpg" class="img-fluid rounded-circle" alt="">
+            <img src="https://github.com/integranucleos/sobretics/blob/master/src/7438269_stock-vector-data-phishing-credit-or-debit-card-on-fishing-hook-mobile-phone-internet-security-flat-design-ve.jpg?raw=true" class="img-fluid rounded-circle" alt="Sobre TICS">
           </div>
 
           <div class="col">
