--- a/index.html
+++ b/index.html
@@ -133,7 +133,26 @@
           </div>
           <div class="col">
             <h2>Saúde Física</h2>
-            <p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+            <h3>Disturbios do sono, obesidade e depressão infantil</h3>
+            <p>
+                Crianças podem estar mais propensas a desenvolver problemas relacionados coma qualidade do sono do que
+                muitos adultos, segundo pesquisa realizada no King's College, de Londres. O tempo em que as crianças 
+                pessam com a tecnologia vem aumentando cada vez mais, causando diversos impactos em suas vidas. 
+                A própria presença do aparelho no quarto das crianças pode afetar o período de descanso. Isso seria 
+                devido à expectativa em receber notificações mantendo um estado constante de alerta.
+            </p> 
+                A obesidade e a depressão infantil foram relacionados com a má qualidade do sono em crianças, ainda aponta 
+                o estudo.
+            </p>
+            <h3>Câncer e problemas auditivos</h3>
+            <p>
+                Não é de hoje que sabemos da relação entre o uso contínuo do celular por muitos anos e a propensão ao 
+                desenvolvimento de câncer. A Organização Mundial de Saúde já chegou até mesmo declarar o celular como 
+                'cancerígeno', mesma atribuição dada ao chumbo e o clorofórmio.
+            </p>
+            <p>
+                
+            </p>
           </div>
         </div>
       </div>
