--- a/index.html
+++ b/index.html
@@ -140,10 +140,13 @@
                 pessam com a tecnologia vem aumentando cada vez mais, causando diversos impactos em suas vidas. 
                 A própria presença do aparelho no quarto das crianças pode afetar o período de descanso. Isso seria 
                 devido à expectativa em receber notificações mantendo um estado constante de alerta.
-            </p> 
+            </p>
+
+            <p>    
                 A obesidade e a depressão infantil foram relacionados com a má qualidade do sono em crianças, ainda aponta 
                 o estudo.
             </p>
+            
             <h3>Câncer e problemas auditivos</h3>
             <p>
                 Não é de hoje que sabemos da relação entre o uso contínuo do celular por muitos anos e a propensão ao 
@@ -151,7 +154,12 @@
                 'cancerígeno', mesma atribuição dada ao chumbo e o clorofórmio.
             </p>
             <p>
-                
+                Pesquisas reunindo diversos países junto com os EUA constataram que pessoas que utilizam o celular mais 
+                de 30 minutos por dia tem risco maior de câncer no cérebro.
+            </p>
+            <p>
+                Além do câncer, as chances de desenvolver o zumbido crînico no ouvido pode chegar a 70% em pessoas que 
+                utilizam o celular até 10 minutos por dia. 
             </p>
           </div>
         </div>
