--- a/index.html
+++ b/index.html
@@ -161,6 +161,20 @@
                 Além do câncer, as chances de desenvolver o zumbido crînico no ouvido pode chegar a 70% em pessoas que 
                 utilizam o celular até 10 minutos por dia. 
             </p>
+            <h3>Acidentes de Trânsito</h3>
+            <p>
+                O uso do celular é considerada a 3º maior causa de mortes no trânsito brasileiro. São 150 vítimas por dia 
+                e 54 mil por ano, segundo o <em>Globo.com</em>. O tempo em que um motorista leva para atender a um celular 
+                enquanto dirige em alte velocidade é suficiente para percorrer duas quadras em uma cidade como São Paulo, 
+                aponta estudo feito pela <strong>Abramet</strong>, tempo suficiente para causar graves acidentes.
+            </p>
+            <p>
+                Para responder a mensagens de texto o motorista leva mais que o tripo do tempo. O risco de colisões de 
+                diversas naturezas é muito grande, aponta o mesmo estudo acima.
+            </p>
+            <p>Mesmo que a legislação vigente aplique multa em quem for flagrado manuseando o celular de qualquer forma 
+                enquanto dirige, é muito comum presenciar esta cena no transito de todo o Brasil.
+            </p>
           </div>
         </div>
       </div>
