--- a/index.html
+++ b/index.html
@@ -69,14 +69,10 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1>Os Perigos das Tecnologias de Informação e Comunicação</h1>
-            <p>
-              <!-- start slipsum code -->
-
-              Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.
-
-              <!-- end slipsum code -->
-            </p> 
+            <h1>CIDADANIA GLOBAL, DESAFIOS CONTEMPORÂNEOS</h1>
+            <h2>
+                Os Perigos das Tecnologias de Informação e Comunicação
+            </h2> 
           </div>
         </div>
       </div>
@@ -119,6 +115,22 @@
           </div>
           <div class="col">
             <img src="https://github.com/integranucleos/sobretics/blob/master/src/depositphotos_39366985-stock-illustration-technological-swamp.jpg?raw=true" class="img-fluid rounded-circle" alt="Sobre TICS">
+            <h2>SAIBA MAIS EM</h2>
+            <p>
+              <a href="https://www.conceitozen.com.br/o-que-e-dependencia-tecnologica.html" target="blank">
+              O que é dependencia tecnologica.
+              </a>
+            </p>
+            <p>
+              <a href="https://www.conceitozen.com.br/palestra-dependencia-digital.html" target="blank">
+              Palestra Dependência Digital
+              </a>
+            </p>
+            <p>
+              <a href="https://www.metropoles.com/vida-e-estilo/bem-estar/saude-bem-estar/dependencia-de-tecnologia-conheca-a-doenca-do-futuro">
+              Dependência Tecnologica: conheça a doença do futuro.
+              </a>
+            </p>
           </div>
         </div>
       </div>
