--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       p{
         font-size: 1.3em;
       }
+
+      a{
+        color:rgba(255, 255, 255, 0.87);
+      }
       section{
         padding:80px 0;
       }
@@ -129,6 +133,11 @@
             <p>
               <a href="https://www.metropoles.com/vida-e-estilo/bem-estar/saude-bem-estar/dependencia-de-tecnologia-conheca-a-doenca-do-futuro">
               Dependência Tecnologica: conheça a doença do futuro.
+              </a>
+            </p>
+            <p>
+              <a href="http://www.revistaeducacao.com.br/dependencia-tecnologica-um-problema-de-saude-publica/">
+                Dependência Tecnológica: Um problema de saúde pública.
               </a>
             </p>
           </div>
