--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
           <div class="col">
             <img src="https://github.com/integranucleos/sobretics/blob/master/src/depositphotos_39366985-stock-illustration-technological-swamp.jpg?raw=true" class="img-fluid rounded-circle" alt="Sobre TICS">
-            <h2>SAIBA MAIS EM</h2>
+            <h3>SAIBA MAIS EM</h3>
             <p>
               <a href="https://www.conceitozen.com.br/o-que-e-dependencia-tecnologica.html" target="blank">
               O que é dependencia tecnologica.
@@ -151,6 +151,22 @@
           <div class="col">
           	<img src="https://github.com/integranucleos/sobretics/blob/master/src/depositphotos_39366985-stock-illustration-technological-swamp.jpg?raw=true" class="img-fluid rounded-circle" alt="Sobre TICS">
             <!-- imagem -->
+            <h3>SAIBA MAIS EM</h3>
+            <p>
+              <a href="https://www.minhavida.com.br/saude/materias/11701-uso-do-celular-pode-trazer-prejuizos-a-saude" target="blank">
+                O uso do celular pode trazer prejuízos a saúde.
+              </a>
+            </p>
+            <p>
+              <a href="https://g1.globo.com/sao-paulo/semana-nacional-transito/noticia/celular-e-a-terceira-maior-causa-de-mortes-no-transito-no-brasil-diz-pesquisa.ghtml" target="blank">
+                Celular é a terceica causa de mortes no trânsito.
+              </a>
+            </p>
+            <p>
+              <a href="https://www.bbc.com/portuguese/geral-42603165" target="blank">
+                Celular antes de dormir afeta sono, hormônios e desenvolvimento infantil.
+              </a>
+            </p>
           </div>
           <div class="col">
             <h2>Saúde Física</h2>
