--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       </div>
     </section>
 
-    <section class="bg-orange-50">
+    <!--<section class="bg-orange-50">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -267,7 +267,7 @@
 
         </div>
       </div>
-    </section>
+    </section>-->
     <section class="copyright">
       <div class="container">
         <div class="row">
