--- a/index.html
+++ b/index.html
@@ -248,6 +248,18 @@
           </div>
           <div class="col">
             <img src="https://github.com/integranucleos/sobretics/blob/master/src/stock-vector-fake-news-flat-icon-vector-741588856.jpg?raw=true" class="img-fluid rounded-circle" alt="Sobre TICS">
+            <h3>SAIBA MAIS EM</h3>
+            <p>
+              <a href="https://www.telegraph.co.uk/technology/0/fake-news-exactly-has-really-had-influence/
+              " target="blank">
+                Fake News exactly has really had influence - <em>Telegraph.co.uk</em>.
+              </a>
+            </p>
+            <p>
+              <a href="https://www.urbandictionary.com/define.php?term=Fake%20news" target="blank">
+                Fake News - <em>Urban dictionary</em>.
+              </a>
+            </p>
           </div>
         </div>
       </div>
